tests/miniJava/neg/004329_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public class java { public static void Main ( String [ ] java ) { { } } } java ( ) { return 0 ; } }
